Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,7 @@
     }
    ],
    "source": [
-    "'www.'+'vandelay.com' # 'www.vandelay.com'"
+    "'vandelay.com'.prepend('') # 'www.vandelay.com'"
    ]
   },
   {
