--- a/index.ipynb
+++ b/index.ipynb
@@ -248,7 +248,7 @@
     }
    ],
    "source": [
-    "'vandelay.com'.prepend('.www') # 'www.vandelay.com'"
+    "'vandelay.com'.prepend'.www') # 'www.vandelay.com'"
    ]
   },
   {
