--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -238,16 +238,16 @@
     {
      "data": {
       "text/plain": [
-       "'.wwwvandelay.com'"
+       "'www.vandelay.com'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'.www'+'vandelay.com' # 'www.vandelay.com'"
+    "'www.'+'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
